<?xml version="1.0" encoding="utf-8"?>


    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuFragment"
        android:id="@+id/Menu_Fragment"
        android:padding="16dp"
    android:background="#78909C">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu_fragment_title">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:text="@string/_1_receptie"

                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_piking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/_2_piking"

                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:text="@string/_3_inventar"

                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:text="@string/_4_nissan_piking"

                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:text="@string/_5_inventar_nissan"

                android:textStyle="bold" />

        </LinearLayout>

    <TextView
        android:id="@+id/tv_menu_fragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/barecode_logistic"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title_in_page"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_butoane"
        app:layout_constraintVertical_bias="0.532" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_butoane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/menu_fragment_user"
            android:textAlignment="viewStart"

            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_user2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_user2" />

        <TextView
            android:id="@+id/tv_user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_fragment_stampila"

            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"


            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="@string/action_sign_in_Login"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/inchidere"

            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inchidere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"


            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/orange"
            android:backgroundTintMode="screen"
            android:text="@string/action_sign_in_Inchidere"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="181dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

