<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"


    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/tv_login_title1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_filed"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_login_introduceti_numarul"
        android:textAlignment="center"
        android:textSize="@dimen/text_title_in_page"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_butoane" />

    <TextView
        android:id="@+id/tv_login_title2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_filed"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_login_stampilei_personale"
        android:textAlignment="center"
        android:textSize="@dimen/text_title_in_page"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_field"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="140dp"
        android:hint="@string/parola"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_field"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/numar_stampila"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="395dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_butoane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="12dp"
            android:layout_marginEnd="239dp"
            android:layout_marginBottom="1dp"
            android:text="@string/menu_fragment_user"
            android:textAlignment="viewStart"
            android:textColor="@color/teal_200"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toEndOf="@+id/tv_user2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:text="@string/menu_fragment_stampila"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_user2">

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:text="@string/action_sign_in_Login" />

            <Button
                android:id="@+id/inchidere"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/action_sign_in_Inchidere" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>