<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment"
    android:background="#78909C" >

    <TextView
        android:id="@+id/tv_login_title1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_filed"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_login_introduceti_numarul"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title_in_page"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_butoane" />

    <TextView
        android:id="@+id/tv_login_title2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_filed"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_login_stampilei_personale"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title_in_page"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title1" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_field"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="140dp"
        android:hint="@string/parola"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_field"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/numar_stampila"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_butoane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/menu_fragment_user"
            android:textAlignment="viewStart"

            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_user2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_user2" />

        <TextView
            android:id="@+id/tv_user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_fragment_stampila"

            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"


            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="@string/action_sign_in_Login"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/inchidere"

            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inchidere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"


            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/orange"
            android:backgroundTintMode="screen"
            android:text="@string/action_sign_in_Inchidere"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>